# reolink-api-rs

./: .env.example  .gitignore  Cargo.toml  README.md
reolink_api/: Cargo.toml
reolink_api/src/: blocking.rs  lib.rs  serde.rs
reolink_api/src/api/: mod.rs
reolink_api/src/api/record/: download.rs  get_recording.rs  get_recording_v20.rs  mod.rs  nvr_download.rs  search.rs  snapshot.rs
reolink_api/src/api/security/: add_user.rs  get_user.rs  login.rs  logout.rs  mod.rs
reolink_api/src/api/system/: get_ability.rs  get_channel_status.rs  get_dev_info.rs  mod.rs
reolink_api/src/common/: mod.rs  url.rs
reolink_api/tests/: tests.rs
reolink_cli/: Cargo.toml
reolink_cli/src/: main.rs
